--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </head>
   <body id="body">
     
-    <a class="ICP" href="https://beian.miit.gov.cn/" target="_blank">123浙ICP备2024094439号</a>
+    <a class="ICP" href="https://beian.miit.gov.cn/" target="_blank">浙ICP备2024094439号</a>
     <div class="overlay"></div>
     <div id="app"></div>
       
