--- a/public/html/home.html
+++ b/public/html/home.html
@@ -19,7 +19,7 @@
           <div class="col-md-8 home-perosn-right">
 
             <div class="home-person-top">
-              <div class="welcome">欢迎来到我的博客，正常营业ing</div>
+              <div class="welcome">欢迎来到我的博客，正在升级为vue中</div>
             </div>
             <div class="home-person-bot container">
               <h>创建时间：2023年5月5日</h>
