--- a/public/html/home_list.html
+++ b/public/html/home_list.html
@@ -1,11 +1,25 @@
 <body>
   <div class="home-bulletin">公告</div>
   <div class="home-news">
-    <div class="home-new" onclick="loadWeek('6')">
-      当前博客版本v1.6.2
+    <div class="home-new">
+      <div>
+        当前博客版本dev2.0 为vue抢先体验版
+      </div>
+      <div>
+        部分功能任然不完善,请见谅
+      </div>
+      <div>
+        因为docker hub无法连接,更新也比较麻烦
+      </div>
+      <div>
+        建议访问https://xyzyx0314.github.io/
+      </div>
     </div>
     <div class="home-new" onclick="loadWeek('5')">
       博客成功转移至服务器
+    </div>
+    <div class="home-new">
+      当前
     </div>
   </div>
 </body>
